Párrafo introductorio en el capítulo 5 (#59)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -84,45 +84,44 @@
 \import{tex/capitulos/}{introduccion.tex}
 
 
-\chapter{El concepto de \textit{fractal}}
+\chapter{El concepto de \textit{fractal}.}
 \label{chap:concepto}
 
 \import{tex/capitulos/}{capitulo-1.tex}
 
-\chapter{Iteración}
+\chapter{Iteración.}
 \label{chap:iteracion}
 
 \import{tex/capitulos/}{capitulo-2.tex}
 
 
-\chapter{Conjuntos de Julia y Mandelbrot}
+\chapter{Conjuntos de Julia y Mandelbrot.}
 \label{chap:Julia-Mandelbrot}
 
 \import{tex/capitulos/}{capitulo-3.tex}
 
-\chapter{Sistemas de Funciones Iteradas}
+\chapter{Sistemas de Funciones Iteradas.}
 \label{chap:SFI}
 
 \import{tex/capitulos/}{capitulo-4.tex}
 
-\chapter{Introducción a las herramientas de renderización}
-\label{chap:renderizacion}
+\chapter{Introducción a las herramientas de visualización}
+\label{chap:visualizacion}
 
 \import{tex/capitulos/}{capitulo-5.tex}
 
-\chapter{Visualización de fractales en 2D}
+\chapter{Visualización de fractales en 2D.}
 \label{chap:fractales-2D}
 
 \import{tex/capitulos/}{capitulo-6.tex}
 
-\chapter{Introducción al \textit{Ray-Tracing}}
+\chapter{Introducción al \textit{Ray-Tracing}.}
 \label{chap:ray-tracing}
 
 \import{tex/capitulos/}{capitulo-7.tex}
 
-\chapter{Visualización de fractales en 3D}
+\chapter{Visualización de fractales en 3D.}
 \label{chap:fractales-3D}
-
 
 \import{tex/capitulos/}{capitulo-8.tex}
 
