--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -23,6 +23,11 @@
 
 \bibitem{Foroutan} Foroutan-pour, K., Dutilleul, P., Smith, D. (1999). Advances in the implementation of the box-counting method of fractal dimension estimation. \textit{Applied Mathematics and Computation, 105}(2–3), 195–210. \url{https://doi.org/10.1016/s0096-3003(98)10096-6}.
 
+\bibitem{cgdirector} Glawion, A. (2022, 12 abril). \textit{CPU vs. GPU Rendering – What’s the difference and which should you choose?} CG Director. Recuperado 20 de mayo de 2022, de \url{https://www.cgdirector.com/cpu-vs-gpu-rendering/#:%7E:text=GPU%20Based%20Rendering%20And%20GPU%20Focused%20Render%20Engines,-GPU%20rendering%20is&text=For%20one%2C%20GPUs%20are%20much,unlike%20CPUs%20which%20operate%20serially}.
+
+\bibitem{computer-graphics} Hughes, J.F., Van Dam, A., McGuire, M., Sklar, D.F., Foley, J.D., Feiner, S.K., Akeley,K. (2014). \textit{Computer graphics : principles and practice} (3rd ed.). Addison-Wesley.
+
+
 \bibitem{MDN-1} \textit{Adding 2D content to a WebGL context - Web APIs | MDN}. (2022, 24 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Adding_2D_content_to_a_WebGL_context}
 
 \bibitem{wikipedia-webgl} colaboradores de Wikipedia. (2022, 16 febrero). \textit{WebGL}. Wikipedia, la enciclopedia libre. \url{https://es.wikipedia.org/wiki/WebGL}
