--- a/memoria/tex/lista-abreviaturas.tex
+++ b/memoria/tex/lista-abreviaturas.tex
@@ -1,5 +1,6 @@
 %%%% En orden alfabético
 \begin{itemize}
+\item ALU: Arithmetic-Logic Unit (Unidad Aritmético-Lógica)
 \item API: Application Programming Interface (Interfaz de Programación de Aplicaciones)
 \item CPU: Central Processing Unit (Unidad Central de Procesamiento)
 \item GPU: Graphics Processing Unit (Unidad de Procesamiento Gráfico)
