Añadiendo una imagen a la introduccion (#59)

--- a/memoria/tex/capitulos/capitulo-5.tex
+++ b/memoria/tex/capitulos/capitulo-5.tex
@@ -14,6 +14,11 @@ En lo que a arquitectura hardware se refiere, la CPU y la GPU presentan varias d
 
 La idea general de la computación gráfica consiste en llevar una escena, que puede ser en 2D o en 3D, compuesta por un conjunto de objetos, a una pantalla compuesta por un número alto pero finito de píxeles. El proceso por el cual identificamos por cada objeto, también llamado \textit{primitiva} con los píxeles que ocupa se denomina \textit{rasterización}. La complejidad en el proceso de rasterización puede aumentar muy rápidamente, por lo que merece la pena separar qué partes del rasterizador querremos cambiar de una aplicación gráfica a otra y cuales es preferible encapsular y obtimizar en una interfaz. Así es como surgen las llamadas APIs de rasterización, entre las que destacan \textcolor{blue}{\href{https://www.opengl.org/}{OpenGL}}, \textcolor{blue}{\href{https://www.microsoft.com/es-es/download/details.aspx?id=35}{DirectX}}, \textcolor{blue}{\href{https://developer.apple.com/metal/}{Metal}} o \textcolor{blue}{\href{https://www.vulkan.org/}{Vulkan}}.
 
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.3]{img/C5/APis.png}
+\end{figure}
+
 Para usar la GPU, debemos especificarle a la API un fragmento de código programado para ejecutarse específicamente en la misma. Se suelen denominar \textit{shaders} a los trozos de código fuente que están escritos para ser ejecutados exclusivamente en la GPU. El resto de código necesario para que la API funcione se suele escribir en C/C++, pero también en Python o en JavaScript y está destinado a ejecutarse en la CPU. Estos shaders en general están escritos en su propio lenguaje: GLSL (GL Shading Language) en el caso de OpenGL y Vulkan, HLSL (High-Level Shading Language) de Microsoft para DirectX y MSL (Metal Shading Language) para Metal. 
 
 Por su parte, \textbf{WebGL} es una adaptación de OpenGL a JavaScript. Es decir, en lugar de C/C++ se emplea JavaScript como lenguaje cuyo código se ejecuta en CPU. Al igual que el propio OpenGL, utiliza GLSL para la programación de shaders. El rasgo más característico de WebGL es que, al utilizar JavaScript, es posible ejecutarlo en cualquier navegador web. Esta es la base de la gran ventaja de WebGL: su portabilidad. Una aplicación web programada en WebGL puede ser usada desde cualquier navegador con soporte, sin que el usuario tenga que instalar ningún tipo de dependencia y de forma totalmente independiente al sistema operativo que utilice el dispositivo o del fabricante de la GPU. Además, el propio JavaScript cuenta con soporte para manipular dinámicamente el DOM de un documento HTML y para la gestión de eventos. Esto, unido a la portabilidad, hace que WebGL sea la mejor opción que podemos elegir para este proyecto.
